--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
         <head>
             <meta charset="UTF-8">
             <link rel="icon" href="/favicon.png">
+            <link rel="stylesheet" href="./src/nvm/eq.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>SoundWave</title>
         </head>
         <body>
             <div id="app"></div>
             <script type="module" src="/src/main.js"></script>
+            <script type="module" src="./src/nvm/eq.js"></script>
         </body>
     </html>
