upload tracks to firebase storage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <link rel="icon" href="/favicon.png">
             <link rel="stylesheet" href="./src/nvm/eq.css">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>SoundWave</title>
+            <title>LUCIDII</title>
         </head>
         <body>
             <div id="app"></div>
