--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             <div id="app"></div>
             <script type="module" src="/src/main.js"></script>
             <script type="module" src="./src/nvm/eq.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/spleeter@0.1.0/src/index.min.js"></script>
         </body>
     </html>
