--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <link rel="icon" href="/favicon.png">
-            <link rel="stylesheet" href="./src/nvm/eq.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+<html lang="en">
 
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>LUCIDII</title>
-        </head>
-        <body>
-            <div id="app"></div>
-            <script type="module" src="/src/main.js"></script>
-            <script type="module" src="./src/nvm/eq.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/spleeter@0.1.0/src/index.min.js"></script>
-        </body>
-    </html>
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" href="/src/assets/favicon.png">
+    <link rel="stylesheet" href="./src/nvm/eq.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LUCIDII</title>
+</head>
+
+<body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/nvm/eq.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/spleeter@0.1.0/src/index.min.js"></script>
+</body>
+
+</html>
